2007-08-12  Kohei Yoshida  <kyoshida@novell.com>

	* workben/addon_pkg/autogen.sh:
	* workben/addon_pkg/configure.ac:
	* workben/addon_pkg/Makefile.in: added so that we can use autoconf.

	* workben/addon_pkg/Makefile: moved to Makefile_build as a backup.

2007-08-12  Kohei Yoshida  <kyoshida@novell.com>

	* source/ui/scsolver.hrc: moved to source/inc/scsolver.hrc to make it 
	globally accessible.
	
	* source/service/service.cxx: use my own string resource code for add-on
	package build.

	* workben/addon_pkg/Makefile:
	* workben/addon_pkg/Makefile_SDK.mk:
	* workben/addon_pkg/res/en-US.cxx:
	* workben/addon_pkg/res/resource.hxx: added my own string resource 
	handling for add-on package build, since UNO API does not provide a 
	means for string resource localization.

2007-08-08  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/basedlg.hxx:
	* source/inc/solver.hxx:
	* source/service/service.cxx: changed so that scsolver can be built 
	externally using the SDK.
	
	* source/numeric/makefile.mk: fixed ooo-build breakage.

	* workben/addon_pkg/Makefile_SDK.mk: added for building scsolver module
	externally using the SDK.

2007-07-26  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/numeric/funcobj.hxx:
	* source/numeric/funcobj.cxx: added toBaseFuncObj method to wrap
	SingleVarFuncObj inside a BaseFuncObj instance so that it can be passed
	to NumericalDiffer, which expects BaseFuncObj instance.
	
	* source/numeric/diff.cxx:
	* source/inc/numeric/quadfitlinesearch.hxx:
	* source/numeric/quadfitlinesearch.cxx:
	* source/numeric/quadfitlinesearch_test.cxx: adjusted for a slight 
	change in BaseFuncObj's interface.
	
	* workben/unittest/Makefile: added diff.o to quadfitlinesearch build 
	rule.

2007-07-26  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/numeric/diff.hxx:
	* source/numeric/diff.cxx:
	* source/numeric/diff_test.cxx:
	* source/numeric/nlpqnewton.cxx: changed the name of class Differentiate