@@ -39,7 +39,8 @@ AC_SUBST(BINDIR)
 UNO_INCLUDE=-I$OOO_SDK_PATH/include
 AC_SUBST(UNO_INCLUDE)
 
-LIBLPSOLVE_PATH=$with_lpsolve
+LIBLPSOLVE_PATH=$(echo $with_lpsolve | sed -e 's/^\.\///g')
+LIBLPSOLVE_PATH=$(pwd)/$LIBLPSOLVE_PATH
 AC_SUBST(LIBLPSOLVE_PATH)
 
 LIBLPSOLVE_ARCHIVE_PATH=$LIBLPSOLVE_PATH/lpsolve55/liblpsolve55.a
@@ -52,3 +53,4 @@ RUNTIME_LIB_PATH=$OOO_INSTALL_PATH/program
 AC_SUBST(RUNTIME_LIB_PATH)
 
 AC_OUTPUT(Makefile)
+
