@@ -1,5 +1,14 @@
 2007-08-12  Kohei Yoshida  <kyoshida@novell.com>
 
+	* workben/addon_pkg/configure.ac: convert the lp_solve path to absolute
+	path.
+	
+	* workben/addon_pkg/Makefile.in: set a symbolic link to lpsolve 
+	directory, fixed 'make regview', and added 'make install' to allow 
+	quick installation of the package.
+
+2007-08-12  Kohei Yoshida  <kyoshida@novell.com>
+
 	* workben/addon_pkg/autogen.sh:
 	* workben/addon_pkg/configure.ac:
 	* workben/addon_pkg/Makefile.in: added so that we can use autoconf.
